use Deque in CheckedPath